# grocery-wizard-backend

./: .gitignore  .travis.yml  Dockerfile  README.md  azure-pipelines.yml  grocery-wizard-firebase-adminsdk-95r53-9c32d80748.json  grocery-wizard-firebase-adminsdk-95r53-9c32d80748.json.enc  pyproject.toml
app/: auth.py  main.py
app/auth/: firebaseauth.py
app/models/: items.py  user.py
app/routers/: v1.py
app/tests/: test_grocery_wizard_backend.py  test_main.py
grocery_wizard_backend/: main.py
tests/: test_grocery_wizard_backend.py
