[tool.poetry]
name = "grocery-wizard-backend"
version = "0.1.0"
description = "Backend Server for Grocery Wizard App"
authors = ["Srujan <srujan.deshpande@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {extras = ["all"], version = "^0.60.1"}
pydantic = "^1.6.1"
typing = "^3.7.4"
firebase-admin = "^4.3.0"
motor = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
